# rust-audio-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  build_and_install.sh  build_and_install_plugin.sh  bundler.toml
audio_engine_cdylib/: Cargo.toml
audio_engine_cdylib/src/: lib.rs
audio_engine_core/: Cargo.toml
audio_engine_core/src/: audio_buffer.rs  audio_buffer_utils.rs  audio_graph.rs  directed_graph.rs  lib.rs  nodes.rs
audio_engine_core/src/nodes/: feedback_sine_subgraph.rs  gain_processor.rs  impulse_generator.rs  input_node.rs  output_node.rs  saw_generator.rs  sine_generator.rs  tap.rs  tap_test.rs
audio_engine_plugin/: Cargo.toml
audio_engine_plugin/src/: audio_graph.rs  buffer_utils.rs  directed_graph.rs  engine.rs  lib.rs  rust_audio_engine.rs
audio_engine_service/: Cargo.toml
audio_engine_service/src/: init.rs  lib.rs  main.rs  service.rs
audio_engine_service/tests/: feedback_delay_test.rs  feedback_sine_test.rs  service_test.rs  two_sine_waves_test.rs
docs/: linked_nih_plugin.md  nih_plugin.md  spec.md
example_app_flutter/: README.md  pubspec.yaml
example_app_flutter/android/app/: build.gradle.kts
example_app_flutter/android/app/src/main/: AndroidManifest.xml
example_app_flutter/integration_test/: simple_test.dart
example_app_flutter/ios/Runner/: Info.plist
example_app_flutter/ios/Runner.xcodeproj/: project.pbxproj
example_app_flutter/lib/: main.dart
example_app_flutter/lib/src/rust/: frb_generated.dart
example_app_flutter/linux/: CMakeLists.txt
example_app_flutter/linux/flutter/: generated_plugins.cmake
example_app_flutter/linux/runner/: my_application.cc
example_app_flutter/macos/Runner.xcodeproj/: project.pbxproj
example_app_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example_app_flutter/macos/Runner/Configs/: AppInfo.xcconfig
example_app_flutter/rust/: Cargo.toml
example_app_flutter/rust/src/api/: simple.rs
example_app_flutter/rust_builder/: pubspec.yaml
example_app_flutter/rust_builder/android/: build.gradle  settings.gradle
example_app_flutter/rust_builder/android/src/main/: AndroidManifest.xml
example_app_flutter/rust_builder/ios/: rust_lib_example_app_flutter.podspec
example_app_flutter/rust_builder/linux/: CMakeLists.txt
example_app_flutter/rust_builder/macos/: rust_lib_example_app_flutter.podspec
example_app_flutter/rust_builder/windows/: CMakeLists.txt
example_app_flutter/test/: widget_test.dart
example_app_flutter/web/: index.html  manifest.json
example_app_flutter/windows/: CMakeLists.txt
example_app_flutter/windows/flutter/: generated_plugins.cmake
example_app_flutter/windows/runner/: Runner.rc  main.cpp
example_app_tauri/: package.json
example_app_tauri/src-tauri/: Cargo.toml  tauri.conf.json
example_app_tauri/src-tauri/src/: main.rs
src/: audio_buffer.rs  audio_graph.rs  buffer_utils.rs  engine.rs  lib.rs  nodes.rs
src/nodes/: gain_processor.rs  saw_generator.rs  sine_generator.rs
(+1 files in other folders)
