[package]
name = "rust_audio_engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
license = "MIT"
homepage = "https://github.com/szk2s/rust-audio-engine"
description = "Rust implementation of NovoNotes AudioEngine API (WIP)"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
#     "assert_process_allocs",
# ] }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = [
    "assert_process_allocs",
] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
