[package]
name = "rust_audio_engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
license = "MIT"
homepage = "https://github.com/szk2s/rust-audio-engine"
description = "Rust implementation of audio engine"

[workspace]
members = [
    "xtask",
    "audio_engine_service",
    "audio_engine_plugin",
    "audio_engine_core",
    "example_app_tauri/src-tauri",
    "audio_engine_cdylib",
]

[lib]

# 以下はなぜかエラーがでるのでコメントアウト、原因未調査
# [profile.release]
# lto = "thin"
# strip = "symbols"

# [profile.profiling]
# inherits = "release"
# debug = true
# strip = "none"
